[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loglens"
version = "1.0.0"
description = "🔍 LogLens - Intelligent Log Analysis CLI Tool | 智能日志分析命令行工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LogLens Team", email = "loglens@example.com"}
]
keywords = [
    "log",
    "analysis",
    "cli",
    "monitoring",
    "debugging",
    "devops",
    "terminal"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
loglens = "loglens.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/LogLens"
Documentation = "https://github.com/gitstq/LogLens#readme"
Repository = "https://github.com/gitstq/LogLens"
Issues = "https://github.com/gitstq/LogLens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["loglens*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
